--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- Sidebar -->
         <aside class="w-64 bg-white shadow-lg flex-shrink-0 hidden md:flex md:flex-col">
             <div class="p-6 bg-green-800 text-white">
-                <h1 class="text-xl font-bold text-center">OVA: ECUACIONES Y DESIGUALDADES LINEALES</h1>
+                <h1 class="text-xl font-bold text-center">OVA: Ecuaciones y Desigualdades Lineales</h1>
             </div>
             <nav class="mt-6 flex-1">
                 <a href="#" class="sidebar-link active flex items-center py-3 px-6 font-medium text-slate-700" data-target="introduccion"><span class="mr-3 text-xl">🚀</span> Introducción</a>
@@ -75,7 +75,7 @@
             <!-- Mobile Header -->
             <div class="md:hidden mb-6">
                  <div class="flex justify-between items-center">
-                    <h1 class="text-xl font-bold text-green-800">OVA: ECUACIONES Y DESIGUALDADES LINEALES</h1>
+                    <h1 class="text-xl font-bold text-green-800">OVA: Ecuaciones y Desigualdades Lineales</h1>
                  </div>
                  <select id="mobile-nav" class="w-full mt-2 p-2 border rounded-md bg-white shadow-sm">
                     <option value="introduccion">🚀 Introducción</option>
@@ -89,7 +89,7 @@
 
             <!-- Introducción -->
             <div id="introduccion" class="content-pane active">
-                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-4">Bienvenido al recurso educativo digital de ecuaciones y desigualdades lineales</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-4">Bienvenido al Recurso Educativo Digital de Ecuaciones y Desigualdades Lineales</h2>
                 <p class="text-slate-700 leading-relaxed mb-4">
                     <span class="text-2xl">🤔</span> <strong>¿Sabías que al programar una app como <span class="text-green-700">Rappi</span>, <span class="text-green-700">Netflix</span> o una tienda online estás usando matemáticas sin darte cuenta?</strong>
                 </p>
@@ -139,15 +139,15 @@
                 <div class="w-full max-w-8xl mx-auto">
                     <div class="mb-4">
                         <button type="button" class="w-full flex justify-between items-center p-4 bg-green-100 border border-green-300 rounded-t-lg focus:outline-none font-bold text-green-800 text-lg accordion-btn mb-2" data-target="#panel-ecuaciones">
-                            Ecuaciones lineales<span class="ml-2">➕</span>
+                            Ecuaciones Lineales<span class="ml-2">➕</span>
                         </button>
                     </div>
                     <div id="panel-ecuaciones" class="accordion-panel hidden bg-white border border-t-0 border-green-300 rounded-b-lg p-4 mb-6">
-                        <!-- CONTENIDO ECUACIONES LINEALES AQUÍ -->
+                        <!-- Contenido ecuaciones lineales aquí -->
                         <div class="space-y-8 text-slate-700 leading-relaxed">
                             <div>
                                 <p class="mb-4">
-                                    Podemos definir una <strong>ecuación lineal</strong> como una frase matemática que tiene dos lados separados por un signo igual (=) en el medio. Esta frase puede contener una o más letras (<strong>incógnitas</strong>) cuyo valor es desconocido. <br>
+                                    Podemos definir una <strong>Ecuación Lineal</strong> como una frase matemática que tiene dos lados separados por un signo igual (=) en el medio. Esta frase puede contener una o más letras (<strong>incógnitas</strong>) cuyo valor es desconocido. <br>
                                     Un ejemplo muy sencillo de una ecuación lineal es: <span class="font-mono bg-green-100 px-2 py-1 rounded">x + 6 = 10</span>, donde <span class="font-bold">x</span> es el valor desconocido o incógnita.
                                 </p>
                             </div>
@@ -157,11 +157,11 @@
                                         <img src="img/ecuaciones_1.webp" alt="Solución gráfica ejemplo" class="max-w-full max-h-full object-contain" style="object-fit:contain;" loading="lazy" />
                                     </div>
                                 </div>
-                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se resuelve una ecuación lineal?</h3>
+                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se Resuelve una Ecuación Lineal?</h3>
                                 <p class="mb-4">La idea es poder encontrar el número que falta. Es decir, <span class="font-bold">encontrar el valor de <span class="text-green-800">x</span> para que los dos lados tengan el mismo valor</span>. Podemos imaginar que es como una <span class="font-bold">balanza</span> <span class="text-xl">⚖️</span> donde debemos mantener los dos lados equilibrados para que no se incline para uno u otro lado.</p>
                             </div>
                             <div class="bg-green-50 border-l-4 border-green-400 p-4 rounded-r-lg">
-                                <h4 class="font-bold text-green-800 mb-2">Ejemplo #1 - Igualdad de lados</h4>
+                                <h4 class="font-bold text-green-800 mb-2">Ejemplo #1 - Igualdad de Lados</h4>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
                                         <img src="img/ecuaciones_2.webp" alt="Solución gráfica ejemplo" class="max-w-full max-h-full object-contain" style="object-fit:contain;" loading="lazy" />
@@ -178,7 +178,7 @@
                                 <p>Entonces, es cierto que <span class="font-mono bg-green-100 px-2 py-1 rounded">10 = x + 6</span>. Por lo que podemos decir que <span class="font-bold text-green-800">x = 4</span> para que la ecuación sea verdadera. <span class="font-bold">¡Bingo!</span> <span class="text-xl">🎉</span> Ahora le puedes decir a tu papá que cargaste <span class="font-bold">4 sacos de maíz</span>.</p>
                             </div>
                             <div class="bg-green-50 border-l-4 border-green-400 p-4 rounded-r-lg">
-                                <h4 class="font-bold text-green-800 mb-2">Ejemplo #2 - Despeje de variables</h4>
+                                <h4 class="font-bold text-green-800 mb-2">Ejemplo #2 - Despeje de Variables</h4>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
                                         <img src="img/ecuaciones_4.webp" alt="Solución gráfica ejemplo" class="max-w-full max-h-full object-contain" style="object-fit:contain;" loading="lazy" />
@@ -197,13 +197,13 @@
                     </div>
                     <div class="mb-4">
                         <button type="button" class="w-full flex justify-between items-center p-4 bg-green-100 border border-green-300 rounded-t-lg focus:outline-none font-bold text-green-800 text-lg accordion-btn mb-2" data-target="#panel-desigualdades">
-                            Desigualdades lineales<span class="ml-2">➕</span>
+                            Desigualdades Lineales<span class="ml-2">➕</span>
                         </button>
                     </div>
                     <div id="panel-desigualdades" class="accordion-panel hidden bg-white border border-t-0 border-green-300 rounded-b-lg p-4 mb-6">
                         <div class="text-slate-700 leading-relaxed space-y-6">
                             <div>
-                                <p class="mb-2">Una <strong>desigualdad lineal</strong> es parecida a una ecuación, pero en este caso los dos lados de la frase no están separados por un signo igual (=) sino por otros símbolos que nos ayudan a determinar si un lado es mayor, menor o igual que el otro.</p>
+                                <p class="mb-2">Una <strong>Desigualdad Lineal</strong> es parecida a una ecuación, pero en este caso los dos lados de la frase no están separados por un signo igual (=) sino por otros símbolos que nos ayudan a determinar si un lado es mayor, menor o igual que el otro.</p>
                                 <p>Por ejemplo: <span class="font-mono bg-green-100 px-2 py-1 rounded">5x &lt; 20</span>, aquí estamos diciendo que 5 veces x es menor que 20.</p>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
@@ -220,7 +220,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se resuelve una desigualdad?</h3>
+                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se Resuelve una Desigualdad?</h3>
                                 <p>La desigualdad se resuelve tratando de encontrar qué valores puede tener una letra (como x) para que la frase matemática sea verdadera. Es como resolver una ecuación, pero en lugar de buscar una sola respuesta, vamos a encontrar todas las posibles respuestas que cumplen la condición.</p>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
@@ -229,7 +229,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h3 class="text-xl font-bold text-green-700 mb-2">Símbolos de igualdad o desigualdad</h3>
+                                <h3 class="text-xl font-bold text-green-700 mb-2">Símbolos de Igualdad o Desigualdad</h3>
                                 <div class="overflow-x-auto">
                                     <table class="min-w-full text-sm text-left border border-green-300 rounded-lg">
                                         <thead class="bg-green-100">
@@ -289,34 +289,34 @@
 
             <!-- Actividades Prácticas -->
             <div id="actividades" class="content-pane">
-                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Actividades prácticas</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Actividades Prácticas</h2>
                 <div class="space-y-8">
                     <!-- Ejercicio 1 -->
                     <div class="bg-white border-l-4 border-green-500 rounded-lg shadow-sm p-6">
-                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 1: presupuesto para herramientas de desarrollo</h3>
-                        <p class="mb-2"><span class="font-semibold">Situación:</span> Estás creando un entorno de trabajo como programador y tienes <span class="font-bold">$50.000</span> disponibles. Cada plugin premium que necesitas cuesta <span class="font-bold">$8.000</span>. ¿Cuántos plugins puedes comprar sin pasarte del presupuesto?</p>
+                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 1: Presupuesto para Herramientas de Desarrollo</h3>
+                        <p class="mb-2"><span class="font-semibold">Situación:</span> estás creando un entorno de trabajo como programador y tienes <span class="font-bold">$50.000</span> disponibles. Cada plugin premium que necesitas cuesta <span class="font-bold">$8.000</span>. ¿Cuántos plugins puedes comprar sin pasarte del presupuesto?</p>
                         <p class="mb-2"><span class="font-semibold">Desigualdad:</span> <span class="font-mono bg-green-100 px-2 py-1 rounded">8000x ≤ 50000</span></p>
-                        <p class="mb-2"><span class="font-semibold">Interpretación:</span> Calcula cuántos plugins puedes instalar sin exceder el presupuesto.</p>
+                        <p class="mb-2"><span class="font-semibold">Interpretación:</span> calcula cuántos plugins puedes instalar sin exceder el presupuesto.</p>
                         <div class="mt-2 mb-2 p-3 bg-green-50 border border-green-200 rounded flex items-center">
                             <input type="text" class="activity-input w-full p-2 border rounded-md bg-white" placeholder="Escribe tu respuesta aquí...">
                         </div>
                     </div>
                     <!-- Ejercicio 2 -->
                     <div class="bg-white border-l-4 border-green-500 rounded-lg shadow-sm p-6">
-                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 2: venta de cursos en línea</h3>
-                        <p class="mb-2"><span class="font-semibold">Situación:</span> Diseñaste un curso básico de programación y lo vendes a <span class="font-bold">$6.000</span>. Quieres ganar al menos <span class="font-bold">$72.000</span> este mes. ¿Cuántas copias necesitas vender como mínimo?</p>
+                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 2: Venta de Cursos en Línea</h3>
+                        <p class="mb-2"><span class="font-semibold">Situación:</span> diseñaste un curso básico de programación y lo vendes a <span class="font-bold">$6.000</span>. Quieres ganar al menos <span class="font-bold">$72.000</span> este mes. ¿Cuántas copias necesitas vender como mínimo?</p>
                         <p class="mb-2"><span class="font-semibold">Desigualdad:</span> <span class="font-mono bg-green-100 px-2 py-1 rounded">6000x ≥ 72000</span></p>
-                        <p class="mb-2"><span class="font-semibold">Interpretación:</span> Resuelve para saber el mínimo de estudiantes necesarios para cumplir tu meta.</p>
+                        <p class="mb-2"><span class="font-semibold">Interpretación:</span> resuelve para saber el mínimo de estudiantes necesarios para cumplir tu meta.</p>
                         <div class="mt-2 mb-2 p-3 bg-green-50 border border-green-200 rounded flex items-center">
                             <input type="text" class="activity-input w-full p-2 border rounded-md bg-white" placeholder="Escribe tu respuesta aquí...">
                         </div>
                     </div>
                     <!-- Ejercicio 3 -->
                     <div class="bg-white border-l-4 border-green-500 rounded-lg shadow-sm p-6">
-                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 3: meta diaria de ventas</h3>
-                        <p class="mb-2"><span class="font-semibold">Situación:</span> Tienes una app de comercio local y ayudas a un pescador a vender sus productos. Cada kilo se vende a <span class="font-bold">$6.000</span>. ¿Cuántos kilos debe vender al día para ganar exactamente <span class="font-bold">$60.000</span>?</p>
+                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 3: Meta Diaria de Ventas</h3>
+                        <p class="mb-2"><span class="font-semibold">Situación:</span> tienes una app de comercio local y ayudas a un pescador a vender sus productos. Cada kilo se vende a <span class="font-bold">$6.000</span>. ¿Cuántos kilos debe vender al día para ganar exactamente <span class="font-bold">$60.000</span>?</p>
                         <p class="mb-2"><span class="font-semibold">Ecuación:</span> <span class="font-mono bg-green-100 px-2 py-1 rounded">6000x = 60000</span></p>
-                        <p class="mb-2"><span class="font-semibold">Interpretación:</span> Resuelve la ecuación y responde la pregunta.</p>
+                        <p class="mb-2"><span class="font-semibold">Interpretación:</span> resuelve la ecuación y responde la pregunta.</p>
                         <div class="mt-2 mb-2 p-3 bg-green-50 border border-green-200 rounded flex items-center">
                             <input type="text" class="activity-input w-full p-2 border rounded-md bg-white" placeholder="Escribe tu respuesta aquí...">
                         </div>
@@ -340,12 +340,12 @@
             <!-- Recursos -->
             <div id="recursos" class="content-pane">
                 <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Recursos para Profundizar</h2>
-                <p class="text-slate-700 leading-relaxed mb-6">Para ampliar tu conocimiento sobre las ecuaciones y desigualdades lineales, te recomendamos explorar los siguientes enlaces y documentos:</p>
+                <p class="text-slate-700 leading-relaxed mb-6">Para ampliar tu conocimiento sobre los Recursos Educativos Digitales, te recomendamos explorar los siguientes enlaces y documentos:</p>
                 <ul class="space-y-4">
                     <!-- Recurso 1 -->
                     <li class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
-                            <h3 class="font-bold text-green-700">Test sobre solución de ecuaciones lineales</h3>
+                            <h3 class="font-bold text-green-700">Test sobre Solución de Ecuaciones Lineales</h3>
                             <a href="https://wordwall.net/es/resource/2912019/ecuaciones-lineales" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
                         </div>
                         <div class="mt-4 sm:mt-0 sm:ml-6 flex-shrink-0">
@@ -357,7 +357,7 @@
                     <!-- Recurso 2 -->
                     <li class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
-                            <h3 class="font-bold text-green-700">Prueba sobre solución de ecuaciones lineales</h3>
+                            <h3 class="font-bold text-green-700">Prueba sobre Solución de Ecuaciones Lineales</h3>
                             <a href="https://wordwall.net/es/resource/74055316/matem%C3%A1ticas/ecuaciones" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
                         </div>
                         <div class="mt-4 sm:mt-0 sm:ml-6 flex-shrink-0">
@@ -369,7 +369,7 @@
                     <!-- Recurso 3 -->
                     <li class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
-                            <h3 class="font-bold text-green-700">Test sobre solución de desigualdades lineales</h3>
+                            <h3 class="font-bold text-green-700">Test sobre Solución de Desigualdades Lineales</h3>
                             <a href="https://wordwall.net/es/resource/88111903/matem%C3%A1ticas/desigualdades" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
                         </div>
                         <div class="mt-4 sm:mt-0 sm:ml-6 flex-shrink-0">
