--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <a href="#" class="sidebar-link flex items-center py-3 px-6 font-medium text-slate-700" data-target="actividades"><span class="mr-3 text-xl">✍️</span> Actividades</a>
                 <a href="#" class="sidebar-link flex items-center py-3 px-6 font-medium text-slate-700" data-target="evaluacion"><span class="mr-3 text-xl">✔️</span> Evaluación</a>
                 <a href="#" class="sidebar-link flex items-center py-3 px-6 font-medium text-slate-700" data-target="recursos"><span class="mr-3 text-xl">📖</span> Recursos</a>
+                <a href="#" class="sidebar-link flex items-center py-3 px-6 font-medium text-slate-700" data-target="bibliografia"><span class="mr-3 text-xl">📚</span> Bibliografía</a>
             </nav>
         </aside>
 
@@ -84,6 +85,7 @@
                     <option value="actividades">✍️ Actividades Prácticas</option>
                     <option value="evaluacion">✔️ Evaluación</option>
                     <option value="recursos">📖 Recursos</option>
+                        <option value="bibliografia">📚 Bibliografía</option>
                 </select>
             </div>
 
@@ -343,7 +345,7 @@
                 <p class="text-slate-700 leading-relaxed mb-6">Para ampliar tu conocimiento sobre los Recursos Educativos Digitales, te recomendamos explorar los siguientes enlaces y documentos:</p>
                 <ul class="space-y-4">
                     <!-- Recurso 1 -->
-                    <li class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow flex flex-col sm:flex-row sm:items-center justify-between">
+                    <li class="bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500 flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
                             <h3 class="font-bold text-green-700">Test sobre Solución de Ecuaciones Lineales</h3>
                             <a href="https://wordwall.net/es/resource/2912019/ecuaciones-lineales" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
@@ -355,7 +357,7 @@
                         </div>
                     </li>
                     <!-- Recurso 2 -->
-                    <li class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow flex flex-col sm:flex-row sm:items-center justify-between">
+                    <li class="bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500 flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
                             <h3 class="font-bold text-green-700">Prueba sobre Solución de Ecuaciones Lineales</h3>
                             <a href="https://wordwall.net/es/resource/74055316/matem%C3%A1ticas/ecuaciones" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
@@ -367,7 +369,7 @@
                         </div>
                     </li>
                     <!-- Recurso 3 -->
-                    <li class="bg-white p-4 rounded-lg shadow-sm hover:shadow-md transition-shadow flex flex-col sm:flex-row sm:items-center justify-between">
+                    <li class="bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500 flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
                             <h3 class="font-bold text-green-700">Test sobre Solución de Desigualdades Lineales</h3>
                             <a href="https://wordwall.net/es/resource/88111903/matem%C3%A1ticas/desigualdades" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
@@ -379,6 +381,29 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+
+            <!-- Bibliografía -->
+            <div id="bibliografia" class="content-pane">
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Bibliografía</h2>
+                <div class="space-y-6">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500">
+                    <span class="block text-slate-700">
+                        Ministerio de Educación Nacional de Colombia. (2006). <i>Estándares Básicos de Competencias en Matemáticas</i>.<br>
+                        <a href="https://www.mineducacion.gov.co/1621/articles-186635_archivo_pdf.pdf" class="text-green-700 underline break-all" target="_blank">https://www.mineducacion.gov.co/1621/articles-186635_archivo_pdf.pdf</a>
+                    </span>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500">
+                    <span class="block text-slate-700">
+                        Godino, J. D., & Batanero, C. (1994). <i>Didáctica de las Matemáticas</i>. Editorial Universidad de Granada.
+                    </span>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500">
+                    <span class="block text-slate-700">
+                        UNESCO – OREALC. (2005). <i>Educación Matemática en Contextos Rurales Latinoamericanos: Proyecto Regional</i>.<br>
+                        <a href="https://unesdoc.unesco.org/ark:/48223/pf0000143685" class="text-green-700 underline break-all" target="_blank">https://unesdoc.unesco.org/ark:/48223/pf0000143685</a>
+                    </span>
+                </div>
             </div>
             
             <!-- Footer/Credits -->
