--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OVA: Recurso Educativo Digital (RED)</title>
+    <title>OVA: Ecuaciones y Desigualdades Lineales</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,8 +57,10 @@
     <div class="flex min-h-screen">
         <!-- Sidebar -->
         <aside class="w-64 bg-white shadow-lg flex-shrink-0 hidden md:flex md:flex-col">
-            <div class="p-6 bg-green-800 text-white">
-                <h1 class="text-xl font-bold text-center">OVA: Ecuaciones y Desigualdades Lineales</h1>
+            <div class="p-4">
+                <div style="width: 150px; height: 150px;" class="p-2 mx-auto flex items-center justify-center bg-white rounded-full shadow-lg border-2 border-green-500 transition-shadow duration-300 hover:shadow-green-400">
+                    <img src="img/logo.webp" alt="Logo OVA" class="w-5/6 h-5/6 object-contain" loading="lazy">
+                </div>
             </div>
             <nav class="mt-6 flex-1">
                 <a href="#" class="sidebar-link active flex items-center py-3 px-6 font-medium text-slate-700" data-target="introduccion"><span class="mr-3 text-xl">🚀</span> Introducción</a>
@@ -74,10 +76,10 @@
         <!-- Main Content -->
         <main class="flex-1 p-4 sm:p-6 md:p-10 bg-gray-50">
             <!-- Mobile Header -->
-            <div class="md:hidden mb-6">
-                 <div class="flex justify-between items-center">
-                    <h1 class="text-xl font-bold text-green-800">OVA: Ecuaciones y Desigualdades Lineales</h1>
-                 </div>
+            <div class="md:hidden mb-6 flex flex-col items-center">
+                <div style="width: 100px; height: 100px;" class="p-2 flex items-center justify-center bg-white rounded-full shadow-lg transition-shadow duration-300 hover:shadow-green-400 mb-2">
+                    <img src="img/logo.webp" alt="Logo OVA" class="w-5/6 h-5/6 object-contain" loading="lazy">
+                </div>
                  <select id="mobile-nav" class="w-full mt-2 p-2 border rounded-md bg-white shadow-sm">
                     <option value="introduccion">🚀 Introducción</option>
                     <option value="objetivos">🎯 Objetivos</option>
@@ -91,7 +93,7 @@
 
             <!-- Introducción -->
             <div id="introduccion" class="content-pane active">
-                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-4">Bienvenido al Recurso Educativo Digital de Ecuaciones y Desigualdades Lineales</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-4">Ecuaciones y desigualdades lineales</h2>
                 <p class="text-slate-700 leading-relaxed mb-4">
                     <span class="text-2xl">🤔</span> <strong>¿Sabías que al programar una app como <span class="text-green-700">Rappi</span>, <span class="text-green-700">Netflix</span> o una tienda online estás usando matemáticas sin darte cuenta?</strong>
                 </p>
@@ -110,7 +112,7 @@
 
             <!-- Objetivos -->
             <div id="objetivos" class="content-pane">
-                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Objetivos de Aprendizaje</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Objetivos de aprendizaje</h2>
                 <ul class="space-y-4">
                     <li class="flex items-start p-4 bg-white rounded-lg shadow-sm">
                         <span class="text-green-700 mr-3 text-2xl">🧠</span>
@@ -141,7 +143,7 @@
                 <div class="w-full max-w-8xl mx-auto">
                     <div class="mb-4">
                         <button type="button" class="w-full flex justify-between items-center p-4 bg-green-100 border border-green-300 rounded-t-lg focus:outline-none font-bold text-green-800 text-lg accordion-btn mb-2" data-target="#panel-ecuaciones">
-                            Ecuaciones Lineales<span class="ml-2">➕</span>
+                            Ecuaciones lineales<span class="ml-2">➕</span>
                         </button>
                     </div>
                     <div id="panel-ecuaciones" class="accordion-panel hidden bg-white border border-t-0 border-green-300 rounded-b-lg p-4 mb-6">
@@ -149,7 +151,7 @@
                         <div class="space-y-8 text-slate-700 leading-relaxed">
                             <div>
                                 <p class="mb-4">
-                                    Podemos definir una <strong>Ecuación Lineal</strong> como una frase matemática que tiene dos lados separados por un signo igual (=) en el medio. Esta frase puede contener una o más letras (<strong>incógnitas</strong>) cuyo valor es desconocido. <br>
+                                    Podemos definir una <strong>ecuación lineal</strong> como una frase matemática que tiene dos lados separados por un signo igual (=) en el medio. Esta frase puede contener una o más letras (<strong>incógnitas</strong>) cuyo valor es desconocido. <br>
                                     Un ejemplo muy sencillo de una ecuación lineal es: <span class="font-mono bg-green-100 px-2 py-1 rounded">x + 6 = 10</span>, donde <span class="font-bold">x</span> es el valor desconocido o incógnita.
                                 </p>
                             </div>
@@ -159,11 +161,11 @@
                                         <img src="img/ecuaciones_1.webp" alt="Solución gráfica ejemplo" class="max-w-full max-h-full object-contain" style="object-fit:contain;" loading="lazy" />
                                     </div>
                                 </div>
-                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se Resuelve una Ecuación Lineal?</h3>
+                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se resuelve una ecuación lineal?</h3>
                                 <p class="mb-4">La idea es poder encontrar el número que falta. Es decir, <span class="font-bold">encontrar el valor de <span class="text-green-800">x</span> para que los dos lados tengan el mismo valor</span>. Podemos imaginar que es como una <span class="font-bold">balanza</span> <span class="text-xl">⚖️</span> donde debemos mantener los dos lados equilibrados para que no se incline para uno u otro lado.</p>
                             </div>
                             <div class="bg-green-50 border-l-4 border-green-400 p-4 rounded-r-lg">
-                                <h4 class="font-bold text-green-800 mb-2">Ejemplo #1 - Igualdad de Lados</h4>
+                                <h4 class="font-bold text-green-800 mb-2">Ejemplo #1 - Igualdad de lados</h4>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
                                         <img src="img/ecuaciones_2.webp" alt="Solución gráfica ejemplo" class="max-w-full max-h-full object-contain" style="object-fit:contain;" loading="lazy" />
@@ -198,14 +200,14 @@
                         </div>
                     </div>
                     <div class="mb-4">
-                        <button type="button" class="w-full flex justify-between items-center p-4 bg-green-100 border border-green-300 rounded-t-lg focus:outline-none font-bold text-green-800 text-lg accordion-btn mb-2" data-target="#panel-desigualdades">
-                            Desigualdades Lineales<span class="ml-2">➕</span>
+                        <button type="button" class="w-full flex justify-between items-start p-4 bg-green-100 border border-green-300 rounded-t-lg focus:outline-none font-bold text-green-800 text-lg accordion-btn mb-2 text-left" data-target="#panel-desigualdades">
+                            Desigualdades lineales<span class="ml-2">➕</span>
                         </button>
                     </div>
                     <div id="panel-desigualdades" class="accordion-panel hidden bg-white border border-t-0 border-green-300 rounded-b-lg p-4 mb-6">
                         <div class="text-slate-700 leading-relaxed space-y-6">
                             <div>
-                                <p class="mb-2">Una <strong>Desigualdad Lineal</strong> es parecida a una ecuación, pero en este caso los dos lados de la frase no están separados por un signo igual (=) sino por otros símbolos que nos ayudan a determinar si un lado es mayor, menor o igual que el otro.</p>
+                                <p class="mb-2">Una <strong>desigualdad lineal</strong> es parecida a una ecuación, pero en este caso los dos lados de la frase no están separados por un signo igual (=) sino por otros símbolos que nos ayudan a determinar si un lado es mayor, menor o igual que el otro.</p>
                                 <p>Por ejemplo: <span class="font-mono bg-green-100 px-2 py-1 rounded">5x &lt; 20</span>, aquí estamos diciendo que 5 veces x es menor que 20.</p>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
@@ -222,7 +224,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se Resuelve una Desigualdad?</h3>
+                                <h3 class="text-xl font-bold text-green-700 mb-2">¿Cómo se resuelve una desigualdad?</h3>
                                 <p>La desigualdad se resuelve tratando de encontrar qué valores puede tener una letra (como x) para que la frase matemática sea verdadera. Es como resolver una ecuación, pero en lugar de buscar una sola respuesta, vamos a encontrar todas las posibles respuestas que cumplen la condición.</p>
                                 <div class="mt-4 mb-6 p-4 bg-white border border-green-300 rounded-lg shadow-sm flex flex-col items-center">
                                     <div class="w-full h-32 sm:h-48 md:h-64 xl:h-80 bg-white  rounded flex items-center justify-center overflow-hidden">
@@ -231,7 +233,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h3 class="text-xl font-bold text-green-700 mb-2">Símbolos de Igualdad o Desigualdad</h3>
+                                <h3 class="text-xl font-bold text-green-700 mb-2">Símbolos de igualdad o desigualdad</h3>
                                 <div class="overflow-x-auto">
                                     <table class="min-w-full text-sm text-left border border-green-300 rounded-lg">
                                         <thead class="bg-green-100">
@@ -291,11 +293,11 @@
 
             <!-- Actividades Prácticas -->
             <div id="actividades" class="content-pane">
-                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Actividades Prácticas</h2>
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Actividades prácticas</h2>
                 <div class="space-y-8">
                     <!-- Ejercicio 1 -->
                     <div class="bg-white border-l-4 border-green-500 rounded-lg shadow-sm p-6">
-                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 1: Presupuesto para Herramientas de Desarrollo</h3>
+                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 1. Presupuesto para herramientas de desarrollo</h3>
                         <p class="mb-2"><span class="font-semibold">Situación:</span> estás creando un entorno de trabajo como programador y tienes <span class="font-bold">$50.000</span> disponibles. Cada plugin premium que necesitas cuesta <span class="font-bold">$8.000</span>. ¿Cuántos plugins puedes comprar sin pasarte del presupuesto?</p>
                         <p class="mb-2"><span class="font-semibold">Desigualdad:</span> <span class="font-mono bg-green-100 px-2 py-1 rounded">8000x ≤ 50000</span></p>
                         <p class="mb-2"><span class="font-semibold">Interpretación:</span> calcula cuántos plugins puedes instalar sin exceder el presupuesto.</p>
@@ -305,7 +307,7 @@
                     </div>
                     <!-- Ejercicio 2 -->
                     <div class="bg-white border-l-4 border-green-500 rounded-lg shadow-sm p-6">
-                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 2: Venta de Cursos en Línea</h3>
+                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 2. Venta de cursos en línea</h3>
                         <p class="mb-2"><span class="font-semibold">Situación:</span> diseñaste un curso básico de programación y lo vendes a <span class="font-bold">$6.000</span>. Quieres ganar al menos <span class="font-bold">$72.000</span> este mes. ¿Cuántas copias necesitas vender como mínimo?</p>
                         <p class="mb-2"><span class="font-semibold">Desigualdad:</span> <span class="font-mono bg-green-100 px-2 py-1 rounded">6000x ≥ 72000</span></p>
                         <p class="mb-2"><span class="font-semibold">Interpretación:</span> resuelve para saber el mínimo de estudiantes necesarios para cumplir tu meta.</p>
@@ -315,7 +317,7 @@
                     </div>
                     <!-- Ejercicio 3 -->
                     <div class="bg-white border-l-4 border-green-500 rounded-lg shadow-sm p-6">
-                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 3: Meta Diaria de Ventas</h3>
+                        <h3 class="text-xl font-bold text-green-700 mb-2">Ejercicio 3. Meta diaria de ventas</h3>
                         <p class="mb-2"><span class="font-semibold">Situación:</span> tienes una app de comercio local y ayudas a un pescador a vender sus productos. Cada kilo se vende a <span class="font-bold">$6.000</span>. ¿Cuántos kilos debe vender al día para ganar exactamente <span class="font-bold">$60.000</span>?</p>
                         <p class="mb-2"><span class="font-semibold">Ecuación:</span> <span class="font-mono bg-green-100 px-2 py-1 rounded">6000x = 60000</span></p>
                         <p class="mb-2"><span class="font-semibold">Interpretación:</span> resuelve la ecuación y responde la pregunta.</p>
@@ -324,7 +326,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="check-activity-btn" class="mt-6 bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition-colors">Verificar Respuestas</button>
+                <button id="check-activity-btn" class="mt-6 bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition-colors">Verificar respuestas</button>
                 <div id="activity-result" class="mt-4 font-medium"></div>
             </div>
 
@@ -334,20 +336,20 @@
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <p class="text-slate-600 mb-6">Comprueba lo que has aprendido. Selecciona la respuesta correcta para cada pregunta.</p>
                     <div id="quiz-container"></div>
-                    <button id="submit-quiz-btn" class="mt-6 bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition-colors">Finalizar Evaluación</button>
+                    <button id="submit-quiz-btn" class="mt-6 bg-green-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-700 transition-colors">Finalizar evaluación</button>
                     <div id="quiz-result" class="mt-4 text-lg font-bold"></div>
                 </div>
             </div>
 
             <!-- Recursos -->
             <div id="recursos" class="content-pane">
-                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Recursos para Profundizar</h2>
-                <p class="text-slate-700 leading-relaxed mb-6">Para ampliar tu conocimiento sobre los Recursos Educativos Digitales, te recomendamos explorar los siguientes enlaces y documentos:</p>
+                <h2 class="text-2xl sm:text-3xl font-bold text-green-800 mb-6">Recursos para profundizar</h2>
+                <p class="text-slate-700 leading-relaxed mb-6">Para ampliar tu conocimiento sobre ecuaciones y desigualdades, te recomendamos explorar los siguientes enlaces y documentos:</p>
                 <ul class="space-y-4">
                     <!-- Recurso 1 -->
                     <li class="bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500 flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
-                            <h3 class="font-bold text-green-700">Test sobre Solución de Ecuaciones Lineales</h3>
+                            <h3 class="font-bold text-green-700">Test sobre solución de ecuaciones lineales</h3>
                             <a href="https://wordwall.net/es/resource/2912019/ecuaciones-lineales" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
                         </div>
                         <div class="mt-4 sm:mt-0 sm:ml-6 flex-shrink-0">
@@ -359,7 +361,7 @@
                     <!-- Recurso 2 -->
                     <li class="bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500 flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
-                            <h3 class="font-bold text-green-700">Prueba sobre Solución de Ecuaciones Lineales</h3>
+                            <h3 class="font-bold text-green-700">Prueba sobre solución de ecuaciones</h3>
                             <a href="https://wordwall.net/es/resource/74055316/matem%C3%A1ticas/ecuaciones" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
                         </div>
                         <div class="mt-4 sm:mt-0 sm:ml-6 flex-shrink-0">
@@ -371,7 +373,7 @@
                     <!-- Recurso 3 -->
                     <li class="bg-white p-4 rounded-lg shadow-md hover:shadow-lg transition-shadow border-l-4 border-green-500 flex flex-col sm:flex-row sm:items-center justify-between">
                         <div>
-                            <h3 class="font-bold text-green-700">Test sobre Solución de Desigualdades Lineales</h3>
+                            <h3 class="font-bold text-green-700">Test sobre solución de desigualdades lineales</h3>
                             <a href="https://wordwall.net/es/resource/88111903/matem%C3%A1ticas/desigualdades" target="_blank" class="underline text-slate-700 hover:text-green-700">Ir al recurso</a>
                         </div>
                         <div class="mt-4 sm:mt-0 sm:ml-6 flex-shrink-0">
